# Stock-Price-Prediction

./: .gitignore  DataVisualisation.ipynb  LICENSE  README.md  acompanhamento.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/RMSPE/: LSTM-ADA.parquet  LSTM-AXS.parquet  LSTM-BTC.parquet  LSTM-DOGE.parquet  LSTM-NEAR.parquet  MLP-ADA.parquet  MLP-AXS.parquet  MLP-BTC.parquet  MLP-DOGE.parquet  MLP-NEAR.parquet
data/histories/: LSTM-ADA.parquet  LSTM-AXS.parquet  LSTM-BTC.parquet  LSTM-DOGE.parquet  LSTM-NEAR.parquet  MLP-ADA.parquet  MLP-AXS.parquet  MLP-BTC.parquet  MLP-DOGE.parquet  MLP-NEAR.parquet
data/models/: LSTM-ADA.keras  LSTM-AXS.keras  LSTM-BTC.keras  LSTM-DOGE.keras  LSTM-NEAR.keras  MLP-ADA.keras  MLP-AXS.keras  MLP-BTC.keras  MLP-DOGE.keras  MLP-NEAR.keras
data/predictions/: LSTM-ADA.parquet  LSTM-AXS.parquet  LSTM-BTC.parquet  LSTM-DOGE.parquet  LSTM-NEAR.parquet  MLP-ADA.parquet  MLP-AXS.parquet  MLP-BTC.parquet  MLP-DOGE.parquet  MLP-NEAR.parquet
data/scalers/: ADA-1.pkl  ADA-2.pkl  ADA-3.pkl  ADA-4.pkl  ADA-5.pkl  AXS-1.pkl  AXS-2.pkl  AXS-3.pkl  AXS-4.pkl  AXS-5.pkl  BTC-1.pkl  BTC-2.pkl  BTC-3.pkl  BTC-4.pkl  BTC-5.pkl  DOGE-1.pkl  DOGE-2.pkl  DOGE-3.pkl  DOGE-4.pkl  DOGE-5.pkl  NEAR-1.pkl  NEAR-2.pkl  NEAR-3.pkl  NEAR-4.pkl  (+1 more)
notebooks/: RMSE-plots.ipynb  exploratory-analisys.ipynb  exploratory-analysis.ipynb  predictions.ipynb
scripts/: preprocess.py  pull-data.py  pull_datasets.py
src/: main.py
tests/: data_view.ipynb  data_visualisation.ipynb  history-check.ipynb  tests.ipynb  training_test.ipynb
(+8 files in other folders)
